Update GroqClient.java